[gd_scene load_steps=10 format=3 uid="uid://d0s3x2j0hrosx"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_kd32l"]
[ext_resource type="PackedScene" uid="uid://c7avru4nk0jpl" path="res://scenes/player.tscn" id="1_vc3yd"]
[ext_resource type="PackedScene" uid="uid://cog6plubmoa6y" path="res://scenes/spawner.tscn" id="2_o5bso"]
[ext_resource type="PackedScene" uid="uid://b85auiqtryin" path="res://scenes/wall.tscn" id="2_wesjt"]
[ext_resource type="PackedScene" path="res://scenes/fighter.tscn" id="3_inbiy"]
[ext_resource type="PackedScene" uid="uid://ca2o3x6atf2gd" path="res://scenes/deployer.tscn" id="4_gnv5x"]
[ext_resource type="PackedScene" uid="uid://brgr1hpjxyj63" path="res://scenes/turret.tscn" id="5_yh3y5"]
[ext_resource type="PackedScene" uid="uid://b2gkajm3mnqta" path="res://scenes/imp.tscn" id="7_e6diy"]

[sub_resource type="BoxMesh" id="BoxMesh_py5vv"]
size = Vector3(10, 10, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_kd32l")

[node name="Player" parent="." instance=ExtResource("1_vc3yd")]

[node name="Fighter" parent="." instance=ExtResource("3_inbiy")]
position = Vector2(-220, 130)

[node name="Env" type="Node2D" parent="."]

[node name="Left Wall" parent="Env" instance=ExtResource("2_wesjt")]
position = Vector2(-1000, 0)
scale = Vector2(1, 100)

[node name="Right Wall" parent="Env" instance=ExtResource("2_wesjt")]
position = Vector2(1000, 0)
scale = Vector2(1, 100)

[node name="Top Wall" parent="Env" instance=ExtResource("2_wesjt")]
position = Vector2(0, -1000)
scale = Vector2(100, 1)

[node name="Bottom Wall" parent="Env" instance=ExtResource("2_wesjt")]
position = Vector2(0, 1000)
scale = Vector2(100, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Env"]
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Env"]
position = Vector2(500, 0)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D3" type="MeshInstance2D" parent="Env"]
position = Vector2(-500, 0)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D4" type="MeshInstance2D" parent="Env"]
position = Vector2(0, -533)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D5" type="MeshInstance2D" parent="Env"]
position = Vector2(500, -533)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D7" type="MeshInstance2D" parent="Env"]
position = Vector2(1, 647)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D8" type="MeshInstance2D" parent="Env"]
position = Vector2(501, 647)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D9" type="MeshInstance2D" parent="Env"]
position = Vector2(-499, 647)
mesh = SubResource("BoxMesh_py5vv")

[node name="MeshInstance2D6" type="MeshInstance2D" parent="Env"]
position = Vector2(-500, -533)
mesh = SubResource("BoxMesh_py5vv")

[node name="Deployer" parent="." instance=ExtResource("4_gnv5x")]
position = Vector2(1, 865)

[node name="Turret" parent="." instance=ExtResource("5_yh3y5")]
position = Vector2(-260, 455)

[node name="Imp" parent="." instance=ExtResource("7_e6diy")]
position = Vector2(0, 156)

[node name="Spawner" parent="." instance=ExtResource("2_o5bso")]

[node name="TopLeft" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(-759, -677)

[node name="TopMiddle" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(-135, -806)

[node name="TopRight" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(777, -730)

[node name="MiddleLeft" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(-770, 139)

[node name="MiddleRight" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(623, 161)

[node name="BottomLeft" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(-688, 752)

[node name="BottomMiddle" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(0, 706)

[node name="BottomRight" parent="Spawner" instance=ExtResource("2_o5bso")]
position = Vector2(649, 784)
